--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "build:cjs": "BABEL_ENV=cjs babel src -d dist/cjs",
     "build:cjs-plucks": "BABEL_ENV=cjs babel src --ignore main* -d .",
     "build": "npm-run-all -p build:*",
+    "watch:es": "BABEL_ENV=es babel -w src -d dist/es",
+    "watch:cjs": "BABEL_ENV=cjs babel -w src -d dist/cjs",
+    "watch:cjs-plucks": "BABEL_ENV=cjs babel -w src --ignore main* -d .",
+    "watch": "npm-run-all -p watch:*",
     "test": "BABEL_ENV=cjs tape -r babel-register 'src/**/*.test.js' | tap-spec",
     "prepublish": "npm test && npm run build",
     "postpublish": "npm run clean"
