--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tuxsudo/time",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "javascript time-of-day functions",
   "main": "dist/cjs/main.js",
   "module": "dist/es/main.js",
@@ -33,8 +33,7 @@
     "tape": "^4.6.3",
     "trash-cli": "^1.4.0"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/tuxsudo/time-fns.git"
