--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "module": "dist/es/main.js",
   "modules.root": "dist/es",
   "scripts": {
-    "clean": "trash dist format parse",
+    "clean": "trash diff dist elapsedSeconds format isEQ isGT isLT isTimeObject parse",
     "build:es": "BABEL_ENV=es babel src -d dist/es",
     "build:cjs": "BABEL_ENV=cjs babel src -d dist/cjs",
     "build:cjs-plucks": "BABEL_ENV=cjs babel src --ignore main* -d .",
